--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/9. BTS(Branch Trace Store)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/9. BTS(Branch Trace Store)机制.md
@@ -4,11 +4,15 @@
 <!-- code_chunk_output -->
 
 - [BTS机制](#bts机制)
-- [1 检测DS（Debug Store）是否支持](#1-检测dsdebug-store是否支持)
-- [2 Debug store 64位格式](#2-debug-store-64位格式)
-  - [2.1 检测是否支持DS 64位格式](#21-检测是否支持ds-64位格式)
-- [3 检测BTS（Branch Trace Store）机制是否可用](#3-检测btsbranch-trace-store机制是否可用)
-- [4 检测PEBS（Precise Event Based Sampling）机制是否可用](#4-检测pebsprecise-event-based-sampling机制是否可用)
+  - [DS save 区域](#ds-save-区域)
+    - [三个组成](#三个组成)
+    - [两类信息](#两类信息)
+- [检测DS（Debug Store）是否支持](#检测dsdebug-store是否支持)
+  - [两个寄存器](#两个寄存器)
+- [Debug store 存储格式](#debug-store-存储格式)
+  - [检测是否支持DS 64位格式](#检测是否支持ds-64位格式)
+- [检测BTS（Branch Trace Store）机制是否可用](#检测btsbranch-trace-store机制是否可用)
+- [检测PEBS（Precise Event Based Sampling）机制是否可用](#检测pebsprecise-event-based-sampling机制是否可用)
 - [5 Debug Store存储区域](#5-debug-store存储区域)
   - [5.1 DS管理区域](#51-ds管理区域)
     - [5.1.1 BTS与PEBS buffer base](#511-bts与pebs-buffer-base)
@@ -58,6 +62,10 @@ BTS机制允许**BTM（Branch Trace Message**）存储在**内存DS（Debug Stor
 
 当IA32\_DEBUGCTL寄存器的**TR=1**并且**BTS=1**时，**BTM**将存放在**DS save区域**内的**BTS buffer**里，并且由**BTINT位**可以配置为**环状的buffer**或者**buffer满时产生DS（debug store）interrupt**。
 
+## DS save 区域
+
+### 三个组成
+
 在**内存DS save区域**里包括**三部分**。
 
 ① **DS管理配置区域**：用来配置和管理**BTS buffer**和**PEBS buffer**区域。
@@ -66,7 +74,9 @@ BTS机制允许**BTM（Branch Trace Message**）存储在**内存DS（Debug Stor
 
 ③ **PEBS buffer区域**：**PEBS（Precise Event Based Sampling！！！**）允许处理器在**某个事件（中断）发生**后**产生PEBS记录（记录处理器状态**），PEBS记录存放在内存中的buffer区域。
 
-因此，**DS（debug store**）区域可以收集**两类信息**。
+### 两类信息
+
+因此，**DS（debug store**）save 区域可以收集**两类信息**。
 
 ① **BTS信息**：在BTS buffer区域存储**branch记录信息**。
 
@@ -74,9 +84,9 @@ BTS机制允许**BTM（Branch Trace Message**）存储在**内存DS（Debug Stor
 
 **PEBS机制**允许当**某个事件监控中的counter（计数器）溢出**时，处理器在**debug store区域**的**PEBS buffer**保存处理器的**相关状态信息（典型地如寄存器的值**）。关于PEBS机制，我们会在第15章里详细探讨。
 
-# 1 检测DS（Debug Store）是否支持
+# 检测DS（Debug Store）是否支持
 
-Debug Store存储区域是**BTS机制的基石**，因此在**软件使用前**，必须通过**CPUID.01：EDX[21]查询**处理器**是否支持Debug Store机制**。
+Debug Store存储区域是**BTS机制的基石**，因此在**软件使用前**，必须通过`CPUID.01：EDX[21]`查询处理器**是否支持Debug Store机制**。
 
 代码清单14-14（lib\debug.asm）：
 
@@ -95,19 +105,21 @@ support_deubg_store：
       ret
 ```
 
+## 两个寄存器
+
 当**支持Debug Store区域**时，处理器可以使用下面的功能。
 
-① 使用**IA32\_MISC\_ENABLE寄存器**来检测**当前BTS机制是否可用**。
+① 使用`IA32_MISC_ENABLE`寄存器**来检测**当前BTS机制是否可用**。
 
-② 使用**IA32\_DS\_AREA寄存器**来设置**debug store区域**。
+② 使用`IA32_DS_AREA`寄存器**来设置**debug store区域**。
 
 值得注意的是，Intel特别注明，在**SMM模式下DS机制是不可用(！！！**)的。
 
-# 2 Debug store 64位格式
+# Debug store 存储格式
 
 Intel已经**增强了DS（debug store**）功能，使得**无论是否开启IA\-32e模式**（longmode）都支持**64位的debug store格式**，我们将在稍后了解64位的DS格式。
 
-## 2.1 检测是否支持DS 64位格式
+## 检测是否支持DS 64位格式
 
 软件可以使用**CPUID.01：ECX\[2\].DTES64位**检测**是否支持DS64格式**，代码如下。
 
@@ -136,7 +148,7 @@ support_ds64：
 
 ③ **64位**的**PEBS记录格式**。
 
-# 3 检测BTS（Branch Trace Store）机制是否可用
+# 检测BTS（Branch Trace Store）机制是否可用
 
 **IA32\_MISC\_ENABLE寄存器**的bit 11位指示BTS是否可用，代码如下。
 
@@ -165,9 +177,9 @@ available_branch_trace_store_done：
 
 这个函数先测试**是否支持DS功能**，然后通过**IA32\_MISC\_ENABL寄存器**来测试BTS功能软件是否可用。注意，当IA32\_MISC\_ENABLE[11]=1时，指示BTS机制是不可用的；为0时BTS可用。
 
-# 4 检测PEBS（Precise Event Based Sampling）机制是否可用
+# 检测PEBS（Precise Event Based Sampling）机制是否可用
 
-IA32\_MISC\_ENABLE寄存器的bit 12位还指示**PEBS功能是否可用**，代码如下。
+`IA32_MISC_ENABLE`寄存器的bit 12位还指示**PEBS功能是否可用**，代码如下。
 
 代码清单14-17（lib\debug.asm）：
 
