--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/9. BTS(Branch Trace Store)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第14章 分支记录/9. BTS(Branch Trace Store)机制.md
@@ -4,17 +4,20 @@
 <!-- code_chunk_output -->
 
 - [BTS机制](#bts机制)
-  - [DS save 区域](#ds-save-区域)
+  - [DS 区域](#ds-区域)
     - [三个组成](#三个组成)
     - [两类信息](#两类信息)
 - [检测DS（Debug Store）是否支持](#检测dsdebug-store是否支持)
   - [两个寄存器](#两个寄存器)
-- [Debug store 存储格式](#debug-store-存储格式)
+- [Debug store 64存储格式](#debug-store-64存储格式)
   - [检测是否支持DS 64位格式](#检测是否支持ds-64位格式)
 - [检测BTS（Branch Trace Store）机制是否可用](#检测btsbranch-trace-store机制是否可用)
 - [检测PEBS（Precise Event Based Sampling）机制是否可用](#检测pebsprecise-event-based-sampling机制是否可用)
-- [5 Debug Store存储区域](#5-debug-store存储区域)
-  - [5.1 DS管理区域](#51-ds管理区域)
+- [Debug Store存储区域](#debug-store存储区域)
+  - [DS 基地址](#ds-基地址)
+  - [DS 组成](#ds-组成)
+  - [DS 格式](#ds-格式)
+  - [DS管理区域](#ds管理区域)
     - [5.1.1 BTS与PEBS buffer base](#511-bts与pebs-buffer-base)
     - [5.1.2 BTS与PEBS index](#512-bts与pebs-index)
     - [5.1.3 BTS与PEBS maximum](#513-bts与pebs-maximum)
@@ -62,7 +65,7 @@ BTS机制允许**BTM（Branch Trace Message**）存储在**内存DS（Debug Stor
 
 当IA32\_DEBUGCTL寄存器的**TR=1**并且**BTS=1**时，**BTM**将存放在**DS save区域**内的**BTS buffer**里，并且由**BTINT位**可以配置为**环状的buffer**或者**buffer满时产生DS（debug store）interrupt**。
 
-## DS save 区域
+## DS 区域
 
 ### 三个组成
 
@@ -115,7 +118,7 @@ support_deubg_store：
 
 值得注意的是，Intel特别注明，在**SMM模式下DS机制是不可用(！！！**)的。
 
-# Debug store 存储格式
+# Debug store 64存储格式
 
 Intel已经**增强了DS（debug store**）功能，使得**无论是否开启IA\-32e模式**（longmode）都支持**64位的debug store格式**，我们将在稍后了解64位的DS格式。
 
@@ -212,9 +215,13 @@ available_pebs_done：
 
 在这个结果里，可以看到Westmere架构上支持DTES64功能，在Nehalem架构上也应该支持。而BTS与PEBS机制是可用的。这个功能是调用dump\_support\_ds（）来打印的，实现在lib\debug.asm文件里，调用了上面的4个测试函数来得到结果。
 
-# 5 Debug Store存储区域
+# Debug Store存储区域
 
-BTS记录存放在DS（debug store）区域的BTS buffer里。由**IA32\_DS\_AREA寄存器**设置**整个DS save area区域的base地址值**，如下面代码所示。
+BTS记录存放在DS（debug store）区域的BTS buffer里。
+
+## DS 基地址
+
+由**IA32\_DS\_AREA寄存器**设置**整个DS save area区域的base地址值**，如下面代码所示。
 
 ```assembly
 mov ecx，IA32_DS_AREA
@@ -223,6 +230,8 @@ mov edx，0
 wrmsr         ； 写入DS地址
 ```
 
+## DS 组成
+
 整个Debug Store区域分为三个部分。
 
 ① DS management area（**DS管理区域**）：它包含了BTS管理区与PEBS管理区，提供对BTS buffer与PEBS buffer的管理和设置。
@@ -230,6 +239,8 @@ wrmsr         ； 写入DS地址
 ② BTS buffer：这是**BTS记录**存放的区域。
 
 ③ PEBS buffer：这是**PEBS记录**存放的区域。
+
+## DS 格式
 
 从前面我们知道**DS区域**可以分为**32位**与**64位**格式，我们在设置前必须**首先检查是否支持DTES64格式**（否则DS区域的设置将是错误的），处理器在下面的情况下使用DS64格式。
 
@@ -243,13 +254,13 @@ wrmsr         ； 写入DS地址
 
 在IA\-32e模式开启（无论是否支持DTES64功能）时或者在支持DTES64（64位的DS格式）功能的处理器上，使用的都是64位的DS区域。在不支持DTES64功能的处理器处于legacy模式时，使用的是32位的DS区域。
 
-**DS区域基地址**
+## DS区域基地址
 
 IA32\_DS\_AREA寄存器存放的值就是**DS区域地址**，因此IA32\_DS\_AREA寄存器将指向BTS管理区地址。如上所示，**BTS管理区的地址**就是**整个DS管理区域的基地址(相等**)。
 
 在64位模式下IA32\_DS\_AREA寄存器可以设置64位**线性地址(！！！**)值，32位模式下设置32位的线性地址值，高32位被保留。
 
-## 5.1 DS管理区域
+## DS管理区域
 
 **整个DS管理区域**包括了对**BTS buffer**与**PEBS buffer**的**管理和设置**，BTS buffer与PEBS buffer具有相同的设置值（除了**PEBS管理区多了4个counter reset值**）。
 
