--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -5,14 +5,14 @@
 
 - [概述](#概述)
   - [检测PEBS机制是否可用](#检测pebs机制是否可用)
-- [1 PEBS buffer](#1-pebs-buffer)
-  - [1.1 64位的PEBS记录格式](#11-64位的pebs记录格式)
-  - [1.2 增强的PEBS记录格式](#12-增强的pebs记录格式)
-  - [1.3 IA32\_PERF\_CAPABILITIES寄存器](#13-ia32_perf_capabilities寄存器)
-  - [1.4 PEBS buffer区域](#14-pebs-buffer区域)
-  - [1.5 PEBS buffer的maximum与threshold值](#15-pebs-buffer的maximum与threshold值)
-  - [1.6 PEBS reset counter值](#16-pebs-reset-counter值)
-- [2 PEBS中断](#2-pebs中断)
+- [PEBS buffer](#pebs-buffer)
+  - [64位的PEBS记录格式](#64位的pebs记录格式)
+  - [增强的PEBS记录格式](#增强的pebs记录格式)
+  - [IA32_PERF_CAPABILITIES寄存器](#ia32_perf_capabilities寄存器)
+  - [PEBS buffer区域](#pebs-buffer区域)
+  - [PEBS buffer的maximum与threshold值](#pebs-buffer的maximum与threshold值)
+  - [PEBS reset counter值](#pebs-reset-counter值)
+- [PEBS中断](#pebs中断)
   - [2.1 开启PEBS计数器](#21-开启pebs计数器)
   - [2.3 PEBS中断的overflow标志位](#23-pebs中断的overflow标志位)
   - [2.4 PEBS中断的抑制](#24-pebs中断的抑制)
@@ -82,11 +82,11 @@ available_pebs_done：
 
 代码先通过`CPUID.01：EDX[21]`位来检测**是否支持DS（Debug Store**）功能，**IA32\_MISC\_ENABLE寄存器**的**bit 12位是PEBS unavailable位**，置位时表示unavailable（不可用的），为0时表示available（可用的）。
 
-# 1 PEBS buffer
+# PEBS buffer
 
-PEBS buffer与BTS buffer共同组成DS（Debug Store）存储区域里的buffer记录区，因此与BTS buffer一样，在设置PEBS buffer结构前需要检测PEBS记录的格式。
+**PEBS buffer**与**BTS buffer**共同组成`DS（Debug Store）`存储区域里的**buffer记录**区，因此与BTS buffer一样，在设置PEBS buffer结构前需要检测PEBS记录的格式。
 
-## 1.1 64位的PEBS记录格式
+## 64位的PEBS记录格式
 
 当软件检测到**CPUID.01：ECX[2].DTES64位为1**时，表示固定使用64位的PEBS记录格式，而无论是否开启64位模式。
 
@@ -109,7 +109,7 @@ support_ds64：
 
 这个函数在14.9.2节我们已经见过。当支持DS64格式时，BTS记录与PEBS记录都使用64位格式。
 
-## 1.2 增强的PEBS记录格式
+## 增强的PEBS记录格式
 
 从Nehalem架构开始，处理器支持增强的PEBS记录格式，因此我们可以认为这个是增强的64位记录格式，因为它已经支持DS64格式了。
 
@@ -121,9 +121,9 @@ support_ds64：
 
 这些域在普通的PEBS记录格式里是保留位。偏移量90H的IA32_PERF_GLOBAL_STATUS寄存器值是发生PMI前的值，其余3个值使用在增强功能里。
 
-## 1.3 IA32\_PERF\_CAPABILITIES寄存器
+## IA32_PERF_CAPABILITIES寄存器
 
-PEBS机制的一些**额外功能**可以从**IA32\_PERF\_CAPABILITIES寄存器**里获得，这个寄存器需要通过**CPUID.01：ECX[15].PDCM位**来获得支持，代码如下。
+PEBS机制的一些**额外功能**可以从**IA32\_PERF\_CAPABILITIES寄存器**里获得，这个寄存器需要通过`CPUID.01：ECX[15].PDCM`位来获得支持，代码如下。
 
 ```assembly
       mov eax，1
@@ -174,7 +174,7 @@ support_enhancement_pebs：
 
 确定PEBS记录格式是非常重要的，这将影响到PEBS buffer设置是否正确。否则会引起意想不到的错误。
 
-## 1.4 PEBS buffer区域
+## PEBS buffer区域
 
 在DS的管理区里设置PEBS buffer区域的位置与大小，如下所示。
 
@@ -184,23 +184,25 @@ support_enhancement_pebs：
 
 ![config](./images/21.jpg)
 
-## 1.5 PEBS buffer的maximum与threshold值
+## PEBS buffer的maximum与threshold值
 
-不像BTS buffer区域可以使用环形回路的工作方式，PEBS buffer的工作相对简单些：当PEBS index达到threshold值时就会引发DS（Debug Store）中断的产生，从而调用local APIC的perfmon中断handler。因此，PEBS threshold的值应该设为等于PEBS maximum值。
+不像**BTS buffer**区域可以使用**环形回路**的工作方式，PEBS buffer的工作相对简单些：当**PEBS index**达到**threshold值**时就会引发**DS（Debug Store）中断**的产生，从而调用local APIC的perfmon中断handler。
 
-## 1.6 PEBS reset counter值
+因此，PEBS threshold的值应该设为等于PEBS maximum值。
+
+## PEBS reset counter值
 
 PEBS管理区包括**4个counter重置值**，当**由于counter溢出而产生PEBS中断**时，处理器将从这些域里**读取相应的值**，写入对应的**IA32\_PMCx寄存器**里。
 
-**PEBS机制**只允许使用在**4个通用计数器(！！！**)上：IA32\_PMC0到IA32\_PMC3。即使处理器支持更多的通用计数器，也只能使用这4个计数器。IA32\_FIXED\_CTRx计数器不支持PEBS机制。
+**PEBS机制**只允许使用在**4个通用计数器(！！！**)上：`IA32_PMC0`到`IA32_PMC3`。即使处理器支持更多的通用计数器，也只能使用这4个计数器。`IA32_FIXED_CTRx`计数器不支持PEBS机制。
 
-例如：当IA32\_PMC3寄存器的溢出被作为PEBS中断触发条件时，发生PEBS中断后，reset counter3值将被读取写入到IA32\_PMC3寄存器。
+例如：当`IA32_PMC3`寄存器的**溢出**被作为**PEBS中断触发条件**时，发生PEBS中断后，**reset counter3值**将被读取写入到`IA32_PMC3`寄存器。
 
 关于DS区域结构及DS区域设置更详细的描述，请参考14.9节所述。
 
-# 2 PEBS中断
+# PEBS中断
 
-当IA32\_PMCx寄存器被开启支持使用PEBS机制时，**IA32\_PMCx寄存器溢出**时将产生**PEBS中断**而不是counter溢出中断，即PMI（performance monitor interrupt），如下所示。
+当IA32\_PMCx寄存器被开启支持使用PEBS机制时，**IA32\_PMCx寄存器溢出**时将产生**PEBS中断**而**不是counter溢出中断**，即**PMI**（performance monitor interrupt），如下所示。
 
 ![config](./images/22.jpg)
 
