--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -16,7 +16,7 @@
   - [3.1. 开启PEBS计数器代码](#31-开启pebs计数器代码)
   - [3.2. PEBS中断的overflow标志位](#32-pebs中断的overflow标志位)
   - [3.3. PEBS中断的抑制](#33-pebs中断的抑制)
-  - [3.4. PEBS buffer的溢出](#34-pebs-buffer的溢出)
+  - [3.4. PEBS buffer的溢出: 另外的DS中断](#34-pebs-buffer的溢出-另外的ds中断)
 - [4. PEBS事件](#4-pebs事件)
 - [5. PEBS的触发](#5-pebs的触发)
 - [6. PEBS记录的报告](#6-pebs记录的报告)
@@ -262,9 +262,9 @@ PEBS设备就绪（counter溢出）后检查到第1条PEBS事件的到来（coun
 
 ![config](./images/23.jpg)
 
-如上所示，在增强型的PEBS记录（见前面所述）里，位于PEBS记录的90H位置上的IA32\_PERF\_GLOBAL\_STATUS映像值记录着触发PEBS中断时由哪个IA32_PMC计数器产生溢出。软件可以利用这个值判断由哪个counter溢出而触发PEBS中断。
+如上所示，在增强型的PEBS记录（见前面所述）里，位于PEBS记录的90H位置上的IA32\_PERF\_GLOBAL\_STATUS映像值记录着**触发PEBS中断**时由**哪个IA32_PMC计数器**产生溢出。软件可以利用这个值判断由哪个counter溢出而触发PEBS中断。
 
-因此，在触发PEBS中断前，IA32_PERF_GLOBAL_STATUS寄存器是指示着哪个counter溢出的。在PEBS中断被触发的那一刻，处理器将overflow位进行清位。
+因此，在**触发PEBS中断前**，`IA32_PERF_GLOBAL_STATUS`寄存器是指示着哪个counter溢出的。在PEBS中断被触发的那一刻，处理器将overflow位进行清位。
 
 ## 3.3. PEBS中断的抑制
 
@@ -276,15 +276,15 @@ PEBS设备就绪（counter溢出）后检查到第1条PEBS事件的到来（coun
 
 在第1种情形里，当进入PMI handler时，由于PMI handler使用Interrupt-gate（中断门）来进行调用处理程序。在PMI handler里IF标志会被清位，如果此时在PMI handler里达到了PEBS中断触发的条件。那么这个PEBS中断会被抑制。
 
-在第2种情形里，如果PEBS中断使用的counter优先级别低于其他监控事件的counter，处理器会响应优先级别高的counter的监控事件，而这个PEBS中断也会被抑制。
+在第2种情形里，如果PEBS中断使用的counter优先级别低于其他监控事件的counter，处理器会响应优先级别高的counter的监控事件，而这个PEBS中断也会被抑制。当进入PMI handler后，local APIC将自动屏蔽PMI（performance monitor寄存器的bit 16位被置位）。
 
-## 3.4. PEBS buffer的溢出
+## 3.4. PEBS buffer的溢出: 另外的DS中断
 
-当产生多次PEBS中断，以至于PEBS buffer写满而产生PEBS buffer溢出时，在这种情况下将触发另一个DS（Debug Store）中断。IA32_PERF_GLOBAL_STATUS寄存器的OvfBuffer标志位被置位，指示PEBS buffer溢出（如下所示）。
+当产生**多次PEBS中断**，以至于PEBS buffer写满而产生**PEBS buffer溢出**时，在这种情况下将触发**另一个DS（Debug Store）中断**。`IA32_PERF_GLOBAL_STATUS`寄存器的OvfBuffer标志位被置位，指示PEBS buffer溢出（如下所示）。
 
 ![config](./images/24.jpg)
 
-如同BTS buffer溢出一样，当发生PEBS buffer溢出时，local APIC perfmon中断handler通过判断发生PEBS buffer溢出，并需要重置PEBS index值，允许下一条PEBS记录被重新写入。
+如同BTS buffer溢出一样，当发生**PEBS buffer溢出**时，local APIC perfmon中断handler通过判断发生**PEBS buffer溢出**，并需要重置PEBS index值，允许下一条PEBS记录被重新写入。
 
 # 4. PEBS事件
 
@@ -324,7 +324,9 @@ mov edx，0
 wrmsr
 ```
 
-Intel特别说明，对于**使用PEBS事件**，在IA32\_PERFEVTSELx寄存器的设置里，ANY位（bit 20）、INV位（bit 23）、CMASK域（bit31到bit24），以及Edge位（bit 18）都必须为0值，否则将是无效的事件。关于**IA32\_PERFEVTSELx寄存器的结构**，请参考15.3.5节。
+Intel特别说明，对于**使用PEBS事件**，在IA32\_PERFEVTSELx寄存器的设置里，ANY位（bit 20）、INV位（bit 23）、CMASK域（bit31到bit24），以及Edge位（bit 18）都必须为0值，否则将是无效的事件。
+
+关于**IA32\_PERFEVTSELx寄存器的结构**，请参考15.3.5节。
 
 当使用**不支持PEBS的事件**时，**counter溢出**产生的是**PMI**。
 
