--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/10. 处理器的IPI机制.md
@@ -3,28 +3,29 @@
 
 <!-- code_chunk_output -->
 
-* [1 IPI消息对象](#1-ipi消息对象)
-	* [1.1 使用No shorthand目标类型](#11-使用no-shorthand目标类型)
-* [2 使用physical目标模式](#2-使用physical目标模式)
-	* [2.1 广播IPI消息](#21-广播ipi消息)
-	* [2.2 使用其他交付模式](#22-使用其他交付模式)
-* [3 使用logical目标模式](#3-使用logical目标模式)
-* [4 多处理器的初始化与编程](#4-多处理器的初始化与编程)
-	* [4.1 Logical processor的资源](#41-logical-processor的资源)
-	* [4.2 Logical processor的初始化](#42-logical-processor的初始化)
-	* [4.3 实例目标](#43-实例目标)
-	* [4.4 处理器的运行模式](#44-处理器的运行模式)
-	* [4.5 共用流程](#45-共用流程)
-	* [4.6 BSP的流程](#46-bsp的流程)
-	* [4.7 Lock信号](#47-lock信号)
-	* [4.8 Startup routine](#48-startup-routine)
-	* [4.9 BSP广播INIT\-SIPI\-SIPI消息](#49-bsp广播init-sipi-sipi消息)
-	* [4.10 BSP等待AP回复响应](#410-bsp等待ap回复响应)
-	* [4.11 AP初始化工作](#411-ap初始化工作)
+- [1 IPI消息对象](#1-ipi消息对象)
+  - [1.1 使用No shorthand目标类型](#11-使用no-shorthand目标类型)
+- [2 使用physical目标模式](#2-使用physical目标模式)
+  - [2.1 广播IPI消息](#21-广播ipi消息)
+  - [2.2 使用其他交付模式](#22-使用其他交付模式)
+- [3 使用logical目标模式](#3-使用logical目标模式)
+- [4 多处理器的初始化与编程](#4-多处理器的初始化与编程)
+  - [4.1 Logical processor的资源](#41-logical-processor的资源)
+  - [4.2 Logical processor的初始化](#42-logical-processor的初始化)
+  - [4.3 实例目标](#43-实例目标)
+  - [4.4 处理器的运行模式](#44-处理器的运行模式)
+  - [4.5 共用流程](#45-共用流程)
+  - [4.6 BSP的流程](#46-bsp的流程)
+  - [4.7 Lock信号](#47-lock信号)
+  - [4.8 Startup routine](#48-startup-routine)
+  - [4.9 BSP广播INIT\-SIPI\-SIPI消息](#49-bsp广播init-sipi-sipi消息)
+  - [4.10 BSP等待AP回复响应](#410-bsp等待ap回复响应)
+  - [4.11 AP初始化工作](#411-ap初始化工作)
 
 <!-- /code_chunk_output -->
 
 前面介绍的**ICR（Interrupt Command Register**）用于产生**IPI（Inter-processor interrupt）消息**，当往ICR寄存器的**低32位**写入**IPI命令字**时，处理器就产生了IPI消息发送到system bus上。
+
 ```x86asm
 mov DWORD [APIC_BASE + ICR0]，000C4620H   ； 写ICR低32位
 ```
