--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/1. 性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/1. 性能监控机制.md
@@ -4,7 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. 性能监控机制: 事件监控为核心](#1-性能监控机制-事件监控为核心)
-- [2. architectural与non-architectural性能监控机制](#2-architectural与non-architectural性能监控机制)
+- [2. architectural与non-architectural性能监控事件](#2-architectural与non-architectural性能监控事件)
 - [3. 确定处理器的Model](#3-确定处理器的model)
 
 <!-- /code_chunk_output -->
@@ -29,7 +29,7 @@
 
 **PMI**是**可屏蔽的local APIC中的本地中断源(LVT！！！**)，在**LVT Performance monitor寄存器**中设置。
 
-# 2. architectural与non-architectural性能监控机制
+# 2. architectural与non-architectural性能监控事件
 
 在Intel处理器上，**performance monitoring机制**分为**两大类**。
 
