--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/2. Performance monitoring机制的版本.md
@@ -9,7 +9,7 @@
 - [3. IA32_PMCx寄存器在各版本中的数量: general-purpose counter寄存器](#3-ia32_pmcx寄存器在各版本中的数量-general-purpose-counter寄存器)
 - [4. IA32_PMCx寄存器的宽度](#4-ia32_pmcx寄存器的宽度)
   - [4.1. IA32_PMCx寄存器full-width值](#41-ia32_pmcx寄存器full-width值)
-- [5. 预定义的event](#5-预定义的event)
+- [5. 架构化的事件(architectural event)](#5-架构化的事件architectural-event)
 
 <!-- /code_chunk_output -->
 
@@ -44,7 +44,7 @@ CPU:
 
 ③ `EAX[23：16]`：**general\-purpose counter寄存器**的**有效宽度**。**通用监控计数器**.
 
-④ `EAX[31：24]`：所支持的**预定义的event的数量！！！**（见后面的15.2.4节描述）。
+④ `EAX[31：24]`：所支持的**预定义的event的数量！！！**（见后面的15.2.5节描述）。
 
 ⑤ `EDX[4：0]`：所支持的**fixed\-function counter寄存器**的**数量**。**固定用途计数器**.
 
@@ -130,7 +130,7 @@ IA32\_PERF\_CAPABILITIES寄存器的bit 13位是FW\_WRITE（full\-width write）
 
 当`IA32_PERF_CAPABILITIES[13]`=1时，软件也可以写入IA32\_PMCx寄存器的full\-width值的别名寄存器IA32\_A\_PMCx（地址从4C1H开始），关于IA32\_PERF\_CAPABILITIES寄存器的结构请看14.4.1节。
 
-# 5. 预定义的event
+# 5. 架构化的事件(architectural event)
 
 从`CPUID.0AH：EAX[31：24]`获得所支持的**pre\-defined(预定义**)的**architectural（架构化的）event数量**。
 
