--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/3. Nehalem架构下的性能监控机制.md
@@ -146,7 +146,11 @@
 
 # 5. 全局控制器
 
-在performance monitor机制里，全局控制器IA32\_PERF\_GLOBAL\_CTRL寄存器起了**总开关的作用**。它控制着**IA32\_PMCx计数器**与**IA32\_FIXED\_CTRx计数器**的**开启**。它的结构如下所示。
+在performance monitor机制里，全局控制器IA32\_PERF\_GLOBAL\_CTRL寄存器起了**总开关的作用**。
+
+它控制着**IA32\_PMCx计数器**与**IA32\_FIXED\_CTRx计数器**的**开启**。
+
+它的结构如下所示。
 
 ![config](./images/7.jpg)
 
