--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第15章 性能监控/4. PEBS(Precise Event Based Sampling)机制.md
@@ -24,7 +24,7 @@
   - [6.2. 64位的PEBS记录](#62-64位的pebs记录)
 - [7. PEBS buffer满时中断](#7-pebs-buffer满时中断)
   - [7.1. 检测中断触发条件](#71-检测中断触发条件)
-    - [7.1.1. 检测PEBS中断发生](#711-检测pebs中断发生)
+    - [7.1.1. 检测PEBS中断发生: 没有标志位](#711-检测pebs中断发生-没有标志位)
     - [7.1.2. 检测PEBS buffer满时中断发生](#712-检测pebs-buffer满时中断发生)
   - [7.2. PEBS buffer满时中断优先级](#72-pebs-buffer满时中断优先级)
 - [8. 多个PMI触发](#8-多个pmi触发)
@@ -574,7 +574,7 @@ do_perfmon_handler_done：
 
 ![config](./images/27.jpg)
 
-在实验里我们对eax寄存器进行了一些赋值，从结果里我们看到：被报告的eax寄存器值为1，是第1条mov指令执行完后触发了PEBS中断。由于这个PEBS记录使用TRAP报告方式，EIP值是触发PEBS指令的下一条指令地址。
+在实验里我们对eax寄存器进行了一些赋值，从结果里我们看到：被报告的eax寄存器值为1，是第1条mov指令执行完后触发了PEBS中断。由于这个PEBS记录使用**TRAP报告方式**，**EIP值**是触发PEBS指令的**下一条指令地址**。
 
 ## 6.1. 值得注意
 
@@ -650,7 +650,11 @@ do_perfmon_handler_done：
 
 # 7. PEBS buffer满时中断
 
-当**PEBS index值**达到**PEBS threshold时（等于或大于**），意味着PEBS buffer写满将会**产生DS（Debug Store）中断**。对于PEBS buffer的设置，在正确的逻辑下，PEBS threshold应等于PEBS maximum值（保证只能存放最大数量为maximum）。PEBS buffer满时中断也是**使用local APIC performance monitor寄存器所设置的中断handler**。
+当**PEBS index值**达到**PEBS threshold时（等于或大于**），意味着PEBS buffer写满将会**产生DS（Debug Store）中断**。
+
+对于PEBS buffer的设置，在正确的逻辑下，PEBS threshold应等于PEBS maximum值（保证只能存放最大数量为maximum）。
+
+PEBS buffer满时中断也是**使用local APIC performance monitor寄存器所设置的中断handler**。
 
 ## 7.1. 检测中断触发条件
 
@@ -658,13 +662,17 @@ do_perfmon_handler_done：
 
 ![config](./images/29.jpg)
 
-上图揭示了一个容纳10条PEBS记录的PEBS buffer，当PEBS index值指向记录9（最后一条可写记录）时，发生了PEBS中断，处理器在记录9的位置上写入PEBS记录。
+上图揭示了一个容纳**10条**PEBS记录的PEBS buffer，当PEBS **index**值指向**记录9**（**最后一条**可写记录）时，发生了PEBS中断，处理器在**记录9的位置**上写入PEBS记录。
 
-然而，也由于PEBS index达到了PEBS threshold值，同时触发了PEBS buffer满时中断。那么处理器也将响应2个PMI，因此在PMI handler里必须检测中断产生的原因，做出相应的处理。
+然而，**也**由于PEBS index达到了PEBS **threshold值**，同时触发了**PEBS buffer满时中断**。
 
-### 7.1.1. 检测PEBS中断发生
+那么处理器也将响应**2个PMI**，因此在PMI handler里**必须检测中断产生的原因**，做出相应的处理。
 
-可惜的是，并没有什么标志位可以用来判断PEBS中断的发生，软件可以通过逻辑设计达到检测PEBS中断的发生。如下面的逻辑所示。
+### 7.1.1. 检测PEBS中断发生: 没有标志位
+
+可惜的是，并**没有什么标志位**可以用来**判断PEBS中断的发生**，软件可以通过逻辑设计达到检测PEBS中断的发生。
+
+如下面的逻辑所示。
 
 ```c
 pmi_handler（）  /* 在 PMI handler 里 */
@@ -678,7 +686,7 @@ pmi_handler（）  /* 在 PMI handler 里 */
 }
 ```
 
-在软件里，设置一个old\_pebs\_index值，用来保存上一个“当前”的PEBS index值，记录PEBS index的轨迹。当发生PEBS中断时，处理器自动增加PEBS index值指向下一个记录位置。
+在**软件**里，设置一个old\_pebs\_index值，用来保存**上一个**“当前”的PEBS **index**值，记录PEBS index的轨迹。当发生**PEBS中断**时，处理器自动增加PEBS index值指向**下一个记录位置**。
 
 在PMI handler里通过比对old\_pebs\_index值与当前的PEBS index值来达到检测PEBS中断发生的目的，这里很重要的一步是需要更新old\_pebs\_index值，确保下次发生PEBS中断时仍能正常检测到。下面的test\_pebs\_interrupt（）函数用来完成这个任务，实现在lib\perfmon.asm文件里。
 
@@ -706,7 +714,9 @@ test_pebs_interrupt：
 
 ### 7.1.2. 检测PEBS buffer满时中断发生
 
-软件很容易通过IA32\_PERF\_GLOBAL\_STATUS寄存器的OvfBuffer标志位来检则PEBS buffer满时产生的PMI。如下面的逻辑所示。
+**软件**很容易通过`IA32_PERF_GLOBAL_STATUS`寄存器的OvfBuffer标志位来检则PEBS buffer满时产生的PMI。
+
+如下面的逻辑所示。
 
 ```cpp
 pmi_handler（）  /* 在 PMI handler 里 */
@@ -753,9 +763,9 @@ test_pebs_buffer_overflow：
 
 ## 7.2. PEBS buffer满时中断优先级
 
-在同一个IA32_PMC计数器的溢出，当PEBS中断伴随着PEBS buffer满时中断同时产生时（如上所示），Intel明确指出：PEBS中断优先于PEBS buffer溢出中断。
+在**同一个IA32_PMC计数器的溢出**，当PEBS中断伴随着PEBS buffer满时中断同时产生时（如上所示），Intel明确指出：**PEBS中断优先于PEBS buffer溢出中断！！！**。
 
-只有当PEBS中断发生后，才可能产生PEBS buffer溢出中断。因为只有写完PEBS记录后PEBS index指向下一条记录位置才可能达到PEBS threshold值。
+**只有**当**PEBS中断发生**后，**才可能**产生PEBS buffer溢出中断。因为只有写完PEBS记录后PEBS index指向下一条记录位置才可能达到PEBS threshold值。
 
 实际上对于PEBS中断，在perfmon中断handler里可以对这个触发条件忽略处理，处理器会自动处理PEBS中断（即写入PEBS记录）。如果在perfmon中断handler里需要自行处理PEBS中断，那么，需要在perfmon handler先判断是否发生PEBS中断，然后再判断是否产生PEBS buffer满时中断。如下面逻辑所示。
 
