--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -303,7 +303,9 @@ RAMList ram_list = { .blocks = QLIST_HEAD_INITIALIZER(ram_list.blocks) };
 
 AddressSpace下面**root及其子树**形成了一个**虚拟机的物理地址！！！**，但是在往**kvm进行设置！！！**的时候，需要将其转换为一个**平坦的地址模型**，也就是从0开始的。
 
-这个就用FlatView表示，**一个AddressSpace**对应**一个FlatView**。FlatView管理 MR 展开后得到的所有 FlatRange . 
+这个就用FlatView表示，**一个AddressSpace**对应**一个FlatView**。
+
+FlatView管理 MR 展开后得到的所有 FlatRange . 
 
 ### 2.5.2. FlatView相关结构体
 
