--- Auto-Git Commit ---

--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -90,7 +90,9 @@ int main()
  ├─ qemu_spice_init()                        // 初始化 SPICE
  ├─ cpu_exec_init_all()                      // 【2】初始化虚拟机的地址空间，主要是 QEMU 侧的内存布局
  |   ├─ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 FlatView
- |   |   ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion
+ |   |   ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion, 分别对应参数MemoryRegion *mr, Object *owner, const char *name, uint64_t size
+ |   |   |   ├─ object_initialize(mr, sizeof(*mr), TYPE_MEMORY_REGION);   // 对象初始化
+ |   |   |   └─ memory_region_do_init(mr, owner, name, size);           // 初始化, 就是一些赋值操作
  |   |   ├─ address_space_init(&address_space_memory, system_memory, "memory");;   // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
  |   |   |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化该 AddressSpace 的 listeners 链表
  |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
