--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -141,14 +141,14 @@ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 F
 void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 {
     memory_region_ref(root);
-    /*指定address_space_memory的root为system_memory*/
+    /* 指定address_space_memory的root为system_memory */
     as->root = root;
     as->current_map = NULL;
     as->ioeventfd_nb = 0;
     as->ioeventfds = NULL;
     /* 初始化AddressSpace的listeners链表 */
     QTAILQ_INIT(&as->listeners);
-    /*把address_space_memory插入全局链表*/
+    /* 把address_space_memory插入全局链表 */
     QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);
     /* AddressSpace的名称 */
     as->name = g_strdup(name ? name : "anonymous");
@@ -157,7 +157,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 }
 ```
 
-函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，并**初始化对应的FlatView**, 设置**其名称**。最后把`address_space_memory`加入到**全局的address_spaces链表**中，最后调用`MEMORY_LISTENER_UPDATE_REGION()`提交本次修改，这个后面做论述。
+函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 设置**其名称**。最后把`address_space_memory`加入到**全局的address_spaces链表**中，最后调用`MEMORY_LISTENER_UPDATE_REGION()`提交本次修改，这个后面做论述。
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
