--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -98,6 +98,7 @@ int main()
  |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
  |   |   |   └─ address_space_update_topology(as)      // 为 AddressSpace 生成 FlatView
  |   |   |   |   ├─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // 获取as指向的mr 
+ |   |   |   |   ├─ flatviews_init();  // 生成新的GHashTable *flat_views(memory.c中的内部全局变量), 
  |   |   |   |   ├─ generate_memory_topology(physmr)   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
  |   |   |   |   |   ├─ view = flatview_new(mr)     // 参数其实就是 physmr
  |   |   |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
