--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -157,7 +157,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 }
 ```
 
-函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 设置**其名称**。最后把`address_space_memory`加入到**全局的address_spaces链表**中，最后调用`MEMORY_LISTENER_UPDATE_REGION()`提交本次修改，这个后面做论述。
+函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，设置**其名称**, 把`address_space_memory`加入到**全局的address_spaces链表**中，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 在这个里面会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**，这个后面做论述。
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
