--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -98,11 +98,12 @@ int main()
  |   |   |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
  |   |   |   └─ address_space_update_topology(as)      // 为 AddressSpace 生成 FlatView
  |   |   |   |   ├─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // 获取as指向的mr 
- |   |   |   |   ├─ flatviews_init();  // 生成新的GHashTable *flat_views(memory.c中的内部全局变量), 
- |   |   |   |   ├─ generate_memory_topology(physmr)   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
+ |   |   |   |   ├─ flatviews_init();  // 生成新的哈希表flat_views(memory.c中的内部全局变量), 非空直接返回
+ |   |   |   |   ├─ generate_memory_topology(physmr)   // 哈希表将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
  |   |   |   |   |   ├─ view = flatview_new(mr)     // 参数其实就是 physmr
  |   |   |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
- |   |   |   |   |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |   |   |   |   |   ├─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |   |   |   |   |   └─ g_hash_table_replace(flat_views, mr, view); // 添加到哈希表flat_views, key为mr, value是flatview
  |   |   |   |   └─ address_space_set_flatview(as);
  |   |   |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new) // 遍历FlatView的所有FlatRange, 也就是得到若干个 MemoryRegionSection, 将其注册到KVM
  |   |   |   |       |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
