--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -142,6 +142,7 @@ struct MemoryRegion {
     bool is_iommu;
     // 分配的实际内存HVA
     RAMBlock *ram_block;
+    // 拥有者
     Object *owner;
     // 与MemoryRegion相关的操作
     const MemoryRegionOps *ops;
