--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -152,6 +152,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
     QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);
     /* AddressSpace的名称 */
     as->name = g_strdup(name ? name : "anonymous");
+    // 初始化对应的 flatview
     address_space_update_topology(as);
     address_space_update_ioeventfds(as);
 }
@@ -159,7 +160,62 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，设置**其名称**, 把`address_space_memory`加入到**全局的address_spaces链表**中，并通过`address_space_update_topology(as)`**初始化对应的FlatView**, 在这个里面会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**，这个后面做论述。
 
+```cpp
+static void address_space_update_topology(AddressSpace *as)
+{
+    // 获取as的root
+    MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
 
+    flatviews_init();
+    if (!g_hash_table_lookup(flat_views, physmr)) {
+        // 生成 flatview
+        generate_memory_topology(physmr);
+    }
+    address_space_set_flatview(as);
+}
+
+/* Render a memory topology into a list of disjoint absolute ranges. */
+static FlatView *generate_memory_topology(MemoryRegion *mr)
+{
+    int i;
+    FlatView *view;
+
+    view = flatview_new(mr);
+
+    if (mr) {
+        render_memory_region(view, mr, int128_zero(),
+                             addrrange_make(int128_zero(), int128_2_64()),
+                             false, false);
+    }
+    flatview_simplify(view);
+
+    view->dispatch = address_space_dispatch_new(view);
+    for (i = 0; i < view->nr; i++) {
+        MemoryRegionSection mrs =
+            section_from_flat_range(&view->ranges[i], view);
+        flatview_add_to_dispatch(view, &mrs);
+    }
+    address_space_dispatch_compact(view->dispatch);
+    g_hash_table_replace(flat_views, mr, view);
+
+    return view;
+}
+
+static FlatView *flatview_new(MemoryRegion *mr_root)
+{
+    FlatView *view;
+    // 生成新的flatview对象
+    view = g_new0(FlatView, 1);
+    // 引用计数
+    view->ref = 1;
+    // 
+    view->root = mr_root;
+    memory_region_ref(mr_root);
+    trace_flatview_new(view, mr_root);
+
+    return view;
+}
+```
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
