--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -347,7 +347,7 @@ struct FlatView {
     unsigned nr_allocated;
     // 负责根据 GPA 找到 HVA
     struct AddressSpaceDispatch *dispatch;
-    // 指向
+    // 指向该flatview
     MemoryRegion *root;
 };
 ```
