--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -18,6 +18,7 @@
   - [2.5. FlatView: 虚拟机物理地址空间](#25-flatview-虚拟机物理地址空间)
     - [2.5.1. AddressSpace 与 FlatView](#251-addressspace-与-flatview)
     - [2.5.2. FlatView相关结构体](#252-flatview相关结构体)
+    - [FlatView 与 MemoryRegion](#flatview-与-memoryregion)
   - [2.6. MemoryRegionSection: 虚拟机物理地址空间GPA](#26-memoryregionsection-虚拟机物理地址空间gpa)
   - [2.7. KVMSlot:](#27-kvmslot)
   - [2.8. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系](#28-addressspace-memoryregion-flatview-memoryregionsection与kvmslot的关系)
@@ -359,6 +360,10 @@ struct FlatView {
 ![2020-02-27-22-15-39.png](./images/2020-02-27-22-15-39.png)
 
 在FlatView中，FlatRange表示按照需要被切分为了几个范围。
+
+### FlatView 与 MemoryRegion
+
+FlatView 是根据 MemoryRegion 通过 `generate_memory_topology()`生成的.
 
 ## 2.6. MemoryRegionSection: 虚拟机物理地址空间GPA
 
