--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -141,13 +141,14 @@ struct MemoryRegion {
     //表示哪种dirty map被使用，共有三种
     uint8_t dirty_log_mask;
     bool is_iommu;
-    // 分配的实际内存HVA
+    // 指向对应的RAMBlock, 分配的实际内存HVA
     RAMBlock *ram_block;
     // 拥有者
     Object *owner;
     // 与MemoryRegion相关的操作
     const MemoryRegionOps *ops;
     void *opaque;
+    // 指向父MR
     MemoryRegion *container;
     // 在AddressSpace中区域的大小
     Int128 size;
@@ -185,6 +186,8 @@ struct MemoryRegion {
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
 
 ### 2.2.1. 树结构? 其实只有一个root
+
+QEMU通过MemoryRegion来管理虚拟机内存，通过内存属性，GUEST物理地址等特点对内存分类，就形成了多个MemoryRegion，这些MemoryRegion 通过树状组织起来，挂接到根MemoryRegion下。每个MemoryRegion树代表了一类作用的内存，如系统内存空间(system_memory)或IO内存空间(system_io),这两个是qemu中的两个全局MemoryRegion。
 
 **一个AddressSpace**下面包含**多个MemoryRegion**，这些MemoryRegion结构通过**树**连接起来，**树的根**是**AddressSpace**的**root域**。
 
