--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -249,7 +249,7 @@ static FlatView *generate_memory_topology(MemoryRegion *mr)
 static FlatView *flatview_new(MemoryRegion *mr_root)
 {
     FlatView *view;
-    // 生成新的flatview对象
+    // 新分配一个FlatView并初始化
     view = g_new0(FlatView, 1);
     // 引用计数
     view->ref = 1;
