--- a/Virtualization/QEMU/2. init/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. init/2. QEMU初始化.md
@@ -101,8 +101,8 @@ int main()
  |   |   |   |   ├─ flatviews_init();  // 生成新的哈希表flat_views(memory.c中的内部全局变量), 非空直接返回
  |   |   |   |   ├─ generate_memory_topology(physmr)   // 哈希表将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
  |   |   |   |   |   ├─ view = flatview_new(mr)     // 参数其实就是 physmr
- |   |   |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
- |   |   |   |   |   ├─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |   |   |   |   |   ├─ render_memory_region(&view, mr, int128_zero(), addre) // 根据 mr 生成 view
+ |   |   |   |   |   ├─ flatview_simplify(&view) // 简化FlatView, 合并相邻的 FlatRange
  |   |   |   |   |   └─ g_hash_table_replace(flat_views, mr, view); // 添加到哈希表flat_views, key为mr, value是flatview
  |   |   |   |   └─ address_space_set_flatview(as);
  |   |   |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new) // 遍历FlatView的所有FlatRange, 也就是得到若干个 MemoryRegionSection, 将其注册到KVM
