--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -228,10 +228,15 @@ static FlatView *generate_memory_topology(MemoryRegion *mr)
     view = flatview_new(mr);
 
     if (mr) {
+        /*
+          * 将mr所管理的内存进行平坦展开为FlatView,通过view返回
+          * addrrange_make(int128_zero(), int128_2_64()) --> 指定一个GUEST内存空间，起始GPA等于0，大小等于2^64，可以想象成GUEST的整个物理地址空间
+          */
         render_memory_region(view, mr, int128_zero(),
                              addrrange_make(int128_zero(), int128_2_64()),
                              false, false);
     }
+    /*简化FlatView，将View中的FlatRange能合并的都合并*/
     flatview_simplify(view);
 
     view->dispatch = address_space_dispatch_new(view);
