--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -86,11 +86,15 @@ static QTAILQ_HEAD(, MemoryListener) memory_listeners
 
 # 3. 全局的系统AS和MR的初始化: 不分配GPA/HVA
 
-涉及函数：`cpu_exec_init_all() memory_map_init()` 
+涉及函数：`cpu_exec_init_all() -> memory_map_init()` 
 
 在第一节中已经**注册了listener**，但是**addressspace尚未初始化**，本节就介绍下其初始化流程。
 
-从上节的`configure_accelerator()`函数往下走，会执行`cpu_exec_init_all()`函数，该函数主要**初始化**了**IO地址空间**和**系统地址空间**。`memory_map_init()`函数初始化系统地址空间，有一个**全局**的**MemoryRegion**指针`system_memory`指向该区域的MemoryRegion结构。
+从上节的`configure_accelerator()`函数往下走，会执行`cpu_exec_init_all() -> memory_map_init()`函数，该函数主要**初始化**了**IO地址空间**和**系统地址空间**。
+
+原本AS是树状结构, 通过该方式将其展开成平面结构，最终得到的FlatView相当于一个内存条, 最终生成的结构体间关系如下图所示
+
+![2020-03-11-09-44-30.png](./images/2020-03-11-09-44-30.png)
 
 ```cpp
 static void memory_map_init(void)
@@ -132,6 +136,8 @@ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 F
  ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
  └─ address_space_init(&address_space_io, system_io, "I/O");   // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
 ```
+
+地址空间即CPU所能看到的空间，包括Io空间和memory空间，IO空间使用in、out指令访问，有回掉函数。Memory空间使用mov等指令访问。
 
 所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
 
