--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -169,60 +169,15 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 ```cpp
 static void address_space_update_topology(AddressSpace *as)
 {
-    // 获取as的root
+    // 获取as的mr, 如果是alias, 使用原始mr
     MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
 
     flatviews_init();
     if (!g_hash_table_lookup(flat_views, physmr)) {
-        // 生成 flatview
+        // 核心函数, 生成 flatview
         generate_memory_topology(physmr);
     }
     address_space_set_flatview(as);
-}
-
-// 很关键的函数
-static MemoryRegion *memory_region_get_flatview_root(MemoryRegion *mr)
-{
-    while (mr->enabled) {
-        if (mr->alias) {
-            if (!mr->alias_offset && int128_ge(mr->size, mr->alias->size)) {
-                /* The alias is included in its entirety.  Use it as
-                 * the "real" root, so that we can share more FlatViews.
-                 */
-                mr = mr->alias;
-                continue;
-            }
-        } else if (!mr->terminates) {
-            unsigned int found = 0;
-            MemoryRegion *child, *next = NULL;
-            QTAILQ_FOREACH(child, &mr->subregions, subregions_link) {
-                if (child->enabled) {
-                    if (++found > 1) {
-                        next = NULL;
-                        break;
-                    }
-                    if (!child->addr && int128_ge(mr->size, child->size)) {
-                        /* A child is included in its entirety.  If it's the only
-                         * enabled one, use it in the hope of finding an alias down the
-                         * way. This will also let us share FlatViews.
-                         */
-                        next = child;
-                    }
-                }
-            }
-            if (found == 0) {
-                return NULL;
-            }
-            if (next) {
-                mr = next;
-                continue;
-            }
-        }
-
-        return mr;
-    }
-
-    return NULL;
 }
 
 /* Render a memory topology into a list of disjoint absolute ranges. */
@@ -270,6 +225,99 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
     trace_flatview_new(view, mr_root);
 
     return view;
+}
+
+/* Render a memory region into the global view.  Ranges in @view obscure
+ * ranges in @mr.
+ */
+static void render_memory_region(FlatView *view,
+                                 MemoryRegion *mr,
+                                 Int128 base,
+                                 AddrRange clip,
+                                 bool readonly,
+                                 bool nonvolatile)
+{
+    MemoryRegion *subregion;
+    unsigned i;
+    hwaddr offset_in_region;
+    Int128 remain;
+    Int128 now;
+    FlatRange fr;
+    AddrRange tmp;
+
+    if (!mr->enabled) {
+        return;
+    }
+    // base = base + mr->addr
+    int128_addto(&base, int128_make64(mr->addr));
+    //它的读写模式就是mr的读写模式
+    readonly |= mr->readonly;
+    nonvolatile |= mr->nonvolatile;
+    // 找出当前的mr落在父mr的地址区间, 返回base以及大小即start&size
+    tmp = addrrange_make(base, mr->size);
+
+    if (!addrrange_intersects(tmp, clip)) {
+        return;
+    }
+
+    clip = addrrange_intersection(tmp, clip);
+
+    if (mr->alias) {
+        int128_subfrom(&base, int128_make64(mr->alias->addr));
+        int128_subfrom(&base, int128_make64(mr->alias_offset));
+        render_memory_region(view, mr->alias, base, clip,
+                             readonly, nonvolatile);
+        return;
+    }
+
+    /* Render subregions in priority order. */
+    QTAILQ_FOREACH(subregion, &mr->subregions, subregions_link) {
+        render_memory_region(view, subregion, base, clip,
+                             readonly, nonvolatile);
+    }
+
+    if (!mr->terminates) {
+        return;
+    }
+
+    offset_in_region = int128_get64(int128_sub(clip.start, base));
+    base = clip.start;
+    remain = clip.size;
+
+    fr.mr = mr;
+    fr.dirty_log_mask = memory_region_get_dirty_log_mask(mr);
+    fr.romd_mode = mr->romd_mode;
+    fr.readonly = readonly;
+    fr.nonvolatile = nonvolatile;
+
+    /* Render the region itself into any gaps left by the current view. */
+    for (i = 0; i < view->nr && int128_nz(remain); ++i) {
+        if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
+            continue;
+        }
+        if (int128_lt(base, view->ranges[i].addr.start)) {
+            now = int128_min(remain,
+                             int128_sub(view->ranges[i].addr.start, base));
+            fr.offset_in_region = offset_in_region;
+            fr.addr = addrrange_make(base, now);
+            flatview_insert(view, i, &fr);
+            ++i;
+            int128_addto(&base, now);
+            offset_in_region += int128_get64(now);
+            int128_subfrom(&remain, now);
+        }
+        now = int128_sub(int128_min(int128_add(base, remain),
+                                    addrrange_end(view->ranges[i].addr)),
+                         base);
+        int128_addto(&base, now);
+        offset_in_region += int128_get64(now);
+        int128_subfrom(&remain, now);
+    }
+    if (int128_nz(remain)) {
+        fr.offset_in_region = offset_in_region;
+        fr.addr = addrrange_make(base, remain);
+        flatview_insert(view, i, &fr);
+    }
 }
 ```
 
