--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -219,7 +219,7 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
     view = g_new0(FlatView, 1);
     // 引用计数
     view->ref = 1;
-    // 
+    // 该FlatView的root指向对应的MR
     view->root = mr_root;
     memory_region_ref(mr_root);
     trace_flatview_new(view, mr_root);
