--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -181,6 +181,8 @@ struct MemoryRegion {
 };
 ```
 
+首先MemoryRegion有两种,一种为纯容器(逻辑上的概念),一种为物理内存(物理内存又有几种 mmio内存. ram, rom, ioport)
+
 每个MemoryRegion有**多种类型**，可以表示一段**ram**、**rom**、**MMIO**、**alias**.
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
