--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -139,7 +139,17 @@ memory_map_init()                    // 初始化 MemoryRegion 及其对应的 F
 
 首先MemoryRegion有两种,一种为**纯容器**(逻辑上的概念),一种为**物理内存**(物理内存又有几种: mmio内存. ram, rom, ioport),
 
-qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况两个设备的内存映射到相同的线性地址, 比如mmio. 举个例子,对于一个内存条是4g, 它的线性地址为0-4g, 但是vga设备的内存地址通过mmio映射到线性地址的768k–(768+256k), 这种情况应该使vga的线性地址覆盖掉ram的768k–(768+256k)地址,这样写vga地址才能成功.
+qemu要把**MemoryRegion**映射到cpu看到的**线性地址上**(**AddressSpace**), 但是有些情况**两个设备**的内存映射到**相同的线性地址**, 比如mmio. 举个例子,对于一个**内存条是4g**, 它的线性地址为**0-4g**, 但是**vga设备**的内存地址通过**mmio映射**到**线性地址**的`768k–(768+256k)`, 这种情况应该使vga的线性地址覆盖掉ram的`768k–(768+256k)`地址,这样写vga地址才能成功.
+
+**FlatRang**则表示一个MemoryRegion映射到线性空间的一段地址.
+
+qemu内存建模是通过**优先级**来实现**内存地址的覆盖**, 优先级高的MemoryRegion 先被转换为 FlatRang, 后面渲染的时候低优先级的FlatRang不覆盖高优先级的FlatRang, 低优先级的FlatRang如果被高优先级的FlatRang截断则只保存不被高优先级遮盖的部分到flatview, 这是`render_memory_region` 的677行到704行的主要工作
+
+MemoryRegion 的terminates 变量如果为false表示它是一个纯容器, 纯容器自身没有线性地址(只规定一个偏移和大小来限制子区域线性地址的取值), 通过子region来生成线性地址, 所以纯容器所规定的线性地址空间可能留下空洞,会被其他低优先级的MemoryRegion所填充MemoryRegion的addr 变量表示相对于父容器的偏移, 和大小,FlatRange的offset_in_region 变量表示该FlatRange相对所在MemoryRegion的位置(因为一个MemoryRegion可能被高优先级的MemoryRegion截断成多段,所以offset_in_region不一定为0)
+
+fr.addr 标示该FlatRange在线性地址空间的偏移
+
+
 
 地址空间即CPU所能看到的空间，包括Io空间和memory空间，IO空间使用in、out指令访问，有回掉函数。Memory空间使用mov等指令访问。
 
@@ -1608,3 +1618,5 @@ https://www.cnblogs.com/ck1020/p/6738116.html (已完)
 https://blog.csdn.net/Shirleylinyuer/article/details/83592758 (未整理)
 
 http://abcdxyzk.github.io/blog/2015/07/29/kvm-src2/ (未完)
+
+https://blog.csdn.net/woai110120130/article/details/102311622 (未完)
