--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -262,6 +262,7 @@ static void render_memory_region(FlatView *view,
     if (!mr->enabled) {
         return;
     }
+    // mr的addr什么时候初始化的?
     // base = base + mr->addr
     int128_addto(&base, int128_make64(mr->addr));
     //它的读写模式就是mr的读写模式
@@ -269,50 +270,55 @@ static void render_memory_region(FlatView *view,
     nonvolatile |= mr->nonvolatile;
     // 找出当前的mr落在父mr的地址区间, 返回base以及大小即start&size
     tmp = addrrange_make(base, mr->size);
-
+    //计算结果true因此不执行这里。继续向下执行
     if (!addrrange_intersects(tmp, clip)) {
         return;
     }
-
+    //结果为start=0，size=0xffffffffffffffffui64
     clip = addrrange_intersection(tmp, clip);
-
+    //对别名空间进行渲染
     if (mr->alias) {
         int128_subfrom(&base, int128_make64(mr->alias->addr));
         int128_subfrom(&base, int128_make64(mr->alias_offset));
+        //以上两行的计算得出别名空间的大小, 然后渲染别名空间
         render_memory_region(view, mr->alias, base, clip,
                              readonly, nonvolatile);
         return;
     }
-
+    // //渲染子region
     /* Render subregions in priority order. */
     QTAILQ_FOREACH(subregion, &mr->subregions, subregions_link) {
         render_memory_region(view, subregion, base, clip,
                              readonly, nonvolatile);
     }
-
+    //teminates为false表示该容器为纯容器只需要渲染不需要生成flatrange
     if (!mr->terminates) {
         return;
     }
-
+    //计算Mr在线性空间的大小和偏移, 返回结果为0
     offset_in_region = int128_get64(int128_sub(clip.start, base));
+    // 为0
     base = clip.start;
+    // 为0xffffffffffffffffui64
     remain = clip.size;
-
+    //Flatrange成员的初始化
     fr.mr = mr;
     fr.dirty_log_mask = memory_region_get_dirty_log_mask(mr);
     fr.romd_mode = mr->romd_mode;
     fr.readonly = readonly;
     fr.nonvolatile = nonvolatile;
-
+    // flatview的nr什么时候初始化？
     /* Render the region itself into any gaps left by the current view. */
     for (i = 0; i < view->nr && int128_nz(remain); ++i) {
         if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
             continue;
         }
         if (int128_lt(base, view->ranges[i].addr.start)) {
+            //找出两个中小的赋值给now
             now = int128_min(remain,
                              int128_sub(view->ranges[i].addr.start, base));
             fr.offset_in_region = offset_in_region;
+            //完成fr的addrfange的赋值
             fr.addr = addrrange_make(base, now);
             flatview_insert(view, i, &fr);
             ++i;
