--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -188,7 +188,7 @@ static void address_space_update_topology(AddressSpace *as)
 
     flatviews_init();
     if (!g_hash_table_lookup(flat_views, physmr)) {
-        // 核心函数, 生成 flatview
+        // 核心函数, 基于root MR生成 flatview
         generate_memory_topology(physmr);
     }
     address_space_set_flatview(as);
@@ -240,7 +240,17 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 
     return view;
 }
+```
 
+`render_memory_region()`:
+
+- 函数的参数为FlatView *view,代表线性空间试图,维护MemoryRegion和 线性地址的关系(用于gpa→hva的转换)
+
+- MemoryRegion *mr则为要渲染的MemoryRegion
+- base 标示该MemoryRegion对应最根层MemoryRegion的偏移(最根层的偏移一般为0 ,现在已知的就system_memory和 system_io两个地址空间, 分别代表内存空间和io空间)
+- clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的
+
+```cpp
 /* Render a memory region into the global view.  Ranges in @view obscure
  * ranges in @mr.
  */
