--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -156,6 +156,7 @@ struct MemoryRegion {
     hwaddr addr;
     void (*destructor)(MemoryRegion *mr);
     uint64_t align;
+    // teminates为false表明纯容器
     bool terminates;
     //是否是ram内存, 区别于rom只读
     bool ram_device;
