--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -251,6 +251,10 @@ static FlatView *flatview_new(MemoryRegion *mr_root)
 - clip 表示**父空间的地址范围**, 子空间的地址范围是不允许落在父空间的范围外的
 
 ```cpp
+(AddrRange){0, 2^64};
+```
+
+```cpp
 /* Render a memory region into the global view.  Ranges in @view obscure
  * ranges in @mr.
  */
@@ -350,6 +354,20 @@ static void render_memory_region(FlatView *view,
     }
 }
 ```
+
+FlatRange在FlatView中是按照地址升序来排列的,另外不存在地址重合的FlatRange.
+
+后面把结束地址小于MemoryRegion开始地址的FlatRange都排除掉,因为他们的地址和我们要生成的地址没有冲突
+
+剩下的地址分为如下四种情况
+
+![2020-03-11-11-18-13.png](./images/2020-03-11-11-18-13.png)
+
+base 表示要生成的地址空间的开始 remin表示要生成地址空间的结尾
+
+start表示下一个要比较的地址空间的开始, end表示下一个要比较地址空间的结尾
+
+
 
 回到`memory_map_init()`函数中，接下来按照同样的模式对IO区域`system_io`和IO地址空间`address_space_io`做了初始化。
 
