--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -363,6 +363,8 @@ struct FlatView {
 
 **ranges**是一个**数组**，记录FlatView下**所有的FlatRange**，**每个FlatRange**对应一段**虚拟机物理地址区间**，各个FlatRange**不会重叠**，按照地址的顺序保存在数组中。
 
+FlatRange在FlatView中是按照地址升序来排列的,另外不存在地址重合的FlatRange.
+
 具体的范围由一个`AddrRange`结构描述，其描述了地址和大小，`offset_in_region`表示该区间在**全局的MR**中的offset，根据此可以进行**GPA到HVA**的**转换**，mr指向所属的MR。
 
 ![2020-02-27-22-15-39.png](./images/2020-02-27-22-15-39.png)
