--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -321,12 +321,14 @@ static void render_memory_region(FlatView *view,
     fr.romd_mode = mr->romd_mode;
     fr.readonly = readonly;
     fr.nonvolatile = nonvolatile;
-    // flatview的nr什么时候初始化？
+    // 遍历FlatView中的flatview的nr什么时候初始化？
     /* Render the region itself into any gaps left by the current view. */
     for (i = 0; i < view->nr && int128_nz(remain); ++i) {
+        // 将结束地址小于mr开始地址的FlatRange排除掉
         if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
             continue;
         }
+        // 
         if (int128_lt(base, view->ranges[i].addr.start)) {
             //找出两个中小的赋值给now
             now = int128_min(remain,
