--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -324,15 +324,16 @@ static void render_memory_region(FlatView *view,
     // 遍历FlatView中的FlatRanges, flatview的nr什么时候初始化？
     /* Render the region itself into any gaps left by the current view. */
     for (i = 0; i < view->nr && int128_nz(remain); ++i) {
-        // 将结束地址小于mr开始地址的FlatRange排除掉
+        // 将flatrange结束地址小于mr开始地址的FlatRange排除掉
         if (int128_ge(base, addrrange_end(view->ranges[i].addr))) {
             continue;
         }
         // FlatRange开始地址大于mr开始地址
         if (int128_lt(base, view->ranges[i].addr.start)) {
-            //找出两个中小的赋值给now
+            //找出两个中小的赋值给now, min(remain, flatrange.start - base)
             now = int128_min(remain,
                              int128_sub(view->ranges[i].addr.start, base));
+            // flatrange在mr中的偏移, 第一次是0
             fr.offset_in_region = offset_in_region;
             //完成fr的addrfange的赋值, base到min(remin, start)
             fr.addr = addrrange_make(base, now);
@@ -341,7 +342,9 @@ static void render_memory_region(FlatView *view,
             ++i;
             // base = base + now
             int128_addto(&base, now);
+            // offset_in_region = offset_in_region + now
             offset_in_region += int128_get64(now);
+            // remain = remain - now
             int128_subfrom(&remain, now);
         }
         now = int128_sub(int128_min(int128_add(base, remain),
